[package]
name = "lol-rand-skin"
version = "0.1.0"
authors = ["Scarjit <ferdinand.linnenberg@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
league-client-connector = "0.1.2"
log = "0.4.14"
sysinfo = "0.16.5"
serde_json = "1.0.64"
rand = "0.8.3"

[dependencies.reqwest]
version = "0.11.2"
features = ["serde_json"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.tokio]
version = "1.4.0"
features = ["macros", "rt-multi-thread"]

[dependencies.simple_logger]
git = "https://github.com/Scarjit/rust-simple_logger.git"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
